testsuite/tests/structs/invalid_env_md/bad_name.lkt
import common

@metadata struct BadName {
}
